--- a/.gitignore
+++ b/.gitignore
@@ -133,10 +133,8 @@ dmypy.json
 .idea
 
 # Project specific
-etc/error.txt
-etc/info.txt
-etc/output.txt
 
+logs/*.txt
 src/MODEL_NAME_PLACEHOLDER
 data/*
 *_log.txt
